# pi-voice-assistant

./: .env.example  .gitignore  LICENSE  README.md  main.py  mendy_wake_word_training.ipynb  mendy_wake_word_training_debug.ipynb  mic_leds.py  pyproject.toml  telegram_bot_daemon.py  update-pi.sh  wake_word_daemon.py
.agents/: AGENTS.md
.claude/skills/ssh-pi/: SKILL.md
audio_check/: cli.py  config.py  devices.py  errors.py  player.py  recorder.py
brain/: audio_focus.py  backup_trigger.py  calculator.py  classify.py  config.py  gcal.py  halacha.py  language.py  led.py  llm.py  memory.py  mode.py  music_intent.py  reminders.py  respond.py  spotify.py  stt.py  telegram_push.py  timer.py  tools.py  vault.py  volume.py  websearch.py
docs/: memory-backup.md
docs/specs/: shabbat-gating.md
hebrew_tts/: nakdan.py  pronunciation.py  synth.py
models/: mendy.onnx
scripts/: backup_memory.sh
shabbat/: config.py  gate.py  hebcal_client.py  ntp.py  schedule.py
systemd/: pi-memory-backup.service  pi-memory-backup.timer  pi-telegram-bot.service  pi-voice-assistant-gate.service  pi-voice-assistant-gate.timer  pi-voice-assistant.service
wakeword_bench/: bench.py  cli.py
