[project]
name = "pi-voice-assistant"
version = "0.1.0"
description = "Raspberry Pi 4 voice assistant — Milestone 1: mic/speaker hardware connectivity check"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "sounddevice",
    "openwakeword",
    # Pinned below 1.24: onnxruntime 1.24-1.27 has a numeric regression on
    # macOS ARM64 that silently breaks openWakeWord's onnx models -- a
    # validated "Alexa" recording (confirmed via independent Whisper
    # transcription) scored ~0.0002 on 1.27.0 but ~0.99 on 1.23.0, with no
    # errors or warnings either way. Confirmed openwakeword only requires
    # onnxruntime>=1.10.0,<2, so this pin is compatible.
    "onnxruntime<1.24",
    "edge-tts",
    "groq",
    "anthropic",
    "python-dotenv",
]

# This is a personal project deployed to a home Raspberry Pi with no access to
# a corporate package registry proxy that some development machines default to
# -- resolve from public PyPI instead of inheriting that machine-wide index.
[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true
