[project]
name = "pi-voice-assistant"
version = "0.1.0"
description = "Raspberry Pi 4 voice assistant — Milestone 1: mic/speaker hardware connectivity check"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "sounddevice",
    "openwakeword",
    # Pinned below 1.24: onnxruntime 1.24-1.27 has a numeric regression on
    # macOS ARM64 that silently breaks openWakeWord's onnx models -- a
    # validated "Alexa" recording (confirmed via independent Whisper
    # transcription) scored ~0.0002 on 1.27.0 but ~0.99 on 1.23.0, with no
    # errors or warnings either way. Confirmed openwakeword only requires
    # onnxruntime>=1.10.0,<2, so this pin is compatible.
    "onnxruntime<1.24",
    "edge-tts",
    "groq",
    "anthropic",
    "python-dotenv",
    "spotipy>=2.26.0",
    # Mendy's calendar (brain/gcal.py) -- Apache-2.0, license-compatible.
    "google-api-python-client",
    "google-auth",
    # Telegram bot (telegram_bot_daemon.py) -- LGPL-3.0, fine as a dependency
    # of this personal MIT-licensed project.
    "python-telegram-bot>=20",
    # Cross-platform Shabbat gating (shabbat/ntp.py, shabbat/gate.py) -- both
    # MIT/BSD, license-compatible. ntplib queries a real NTP server directly
    # instead of an OS-specific "am I synced" tool; psutil manages the
    # wake_word_daemon.py process directly on platforms without systemd.
    "ntplib>=0.4.0",
    "psutil>=7.2.2",
]

[[tool.uv.index]]
url = "https://cpart.jfrog.io/artifactory/api/pypi/genai-pip-virtual/simple"

# This is a personal project deployed to a home Raspberry Pi with no access to
# a corporate package registry proxy that some development machines default to
# -- resolve from public PyPI instead of inheriting that machine-wide index.
[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true
